--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dependencies": {
         "@emotion/react": "^11.7.1",
         "@emotion/styled": "^11.6.0",
+        "@iconify/react": "^3.1.2",
         "@mui/icons-material": "^5.2.5",
         "@mui/lab": "^5.0.0-alpha.63",
         "@mui/material": "^5.2.6",
@@ -15,6 +16,7 @@
         "date-fns": "^2.28.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-owl-carousel": "^2.3.3",
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.0",
         "react-topbar-progress-indicator": "^4.1.0",
