--- a/package.json
+++ b/package.json
@@ -16,10 +16,15 @@
         "date-fns": "^2.28.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-otp-input": "^2.4.0",
         "react-owl-carousel": "^2.3.3",
+        "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.0",
+        "react-toastify": "^8.1.0",
         "react-topbar-progress-indicator": "^4.1.0",
+        "redux": "^4.1.2",
+        "redux-thunk": "^2.4.1",
         "web-vitals": "^2.1.2"
     },
     "scripts": {
