--- a/package.json
+++ b/package.json
@@ -13,18 +13,23 @@
         "@testing-library/jest-dom": "^5.16.1",
         "@testing-library/react": "^12.1.2",
         "@testing-library/user-event": "^13.5.0",
+        "animate.css": "^4.1.1",
         "date-fns": "^2.28.0",
+        "moment": "^2.29.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-mui-fileuploader": "^0.1.2",
         "react-otp-input": "^2.4.0",
         "react-owl-carousel": "^2.3.3",
         "react-redux": "^7.2.6",
         "react-router-dom": "^5.3.0",
         "react-scripts": "5.0.0",
+        "react-spinners": "^0.11.0",
         "react-toastify": "^8.1.0",
         "react-topbar-progress-indicator": "^4.1.0",
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
+        "sweetalert2": "^11.3.10",
         "web-vitals": "^2.1.2"
     },
     "scripts": {
