--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
         "redux": "^4.1.2",
         "redux-thunk": "^2.4.1",
         "sweetalert2": "^11.3.10",
-        "web-vitals": "^2.1.2"
+        "web-vitals": "^2.1.2",
+        "yarn": "^1.22.17"
     },
     "scripts": {
         "start": "react-scripts start",
