--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "date-fns": "^2.28.0",
         "moment": "^2.29.1",
         "react": "^17.0.2",
+        "react-dnd": "^15.1.1",
+        "react-dnd-html5-backend": "^15.1.2",
         "react-dom": "^17.0.2",
         "react-mui-fileuploader": "^0.1.2",
         "react-otp-input": "^2.4.0",
