--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-toastify": "^8.1.0",
         "react-topbar-progress-indicator": "^4.1.0",
         "redux": "^4.1.2",
+        "redux-logger": "^3.0.6",
         "redux-thunk": "^2.4.1",
         "sweetalert2": "^11.3.10",
         "web-vitals": "^2.1.2",
