--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "animate.css": "^4.1.1",
         "date-fns": "^2.28.0",
         "moment": "^2.29.1",
+        "query-string": "^7.1.1",
         "react": "^17.0.2",
         "react-dnd": "^15.1.1",
         "react-dnd-html5-backend": "^15.1.2",
